--- a/views/post.html
+++ b/views/post.html
@@ -1,43 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism.min.css"
-      integrity="sha512-/mZ1FHPkg6EKcxo0fKXF51ak6Cr2ocgDi5ytaTBjsQZIH/RNs6GF6+oId/vPe3eJB836T36nXwVh/WBl/cWT4w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- Blog Article -->
-    <div class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto">
-      <div class="max-w-2xl">
-        <!-- Content -->
-        <div class="space-y-5 md:space-y-8">
-          {{#post}}
-          <pre>
+<head>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism.min.css"
+    integrity="sha512-/mZ1FHPkg6EKcxo0fKXF51ak6Cr2ocgDi5ytaTBjsQZIH/RNs6GF6+oId/vPe3eJB836T36nXwVh/WBl/cWT4w=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+</head>
+<main>
+  <!-- Blog Article -->
+  <div class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto">
+    <div class="max-w-2xl">
+      <!-- Content -->
+      <div class="space-y-5 md:space-y-8">
+        {{#post}}
+        <pre>
             <code class="language-css">
               {{Content}}
             </code>
           </pre>
 
-          {{/post}}
-        </div>
-
-        <!-- End Content -->
+        {{/post}}
       </div>
+
+      <!-- End Content -->
     </div>
-    <!-- End Blog Article -->
-  </body>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js"
-    integrity="sha512-UOoJElONeUNzQbbKQbjldDf9MwOHqxNz49NNJJ1d90yp+X9edsHyJoAs6O4K19CZGaIdjI5ohK+O2y5lBTW6uQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
-</html>
+  </div>
+  <!-- End Blog Article -->
+</main>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js"
+  integrity="sha512-UOoJElONeUNzQbbKQbjldDf9MwOHqxNz49NNJJ1d90yp+X9edsHyJoAs6O4K19CZGaIdjI5ohK+O2y5lBTW6uQ=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
