Added cattpucin theme plugin and modified some pages

--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="/static/output.css" />
     <title>{{Title}}</title>
   </head>
-  <body class="">
-    {{&embed}}
+  <body class="min-h-screen ctp-macchiato bg-ctp-base">
+    {{> views/partials/nav.html}}
+    <div class="h-full">{{&embed}}</div>
   </body>
 </html>
