--- a/views/login.html
+++ b/views/login.html
@@ -1,8 +1,8 @@
-<main class="bg-gray-100 flex h-full items-center py-16 dark:bg-neutral-800">
+<main class="flex min-h-screen items-center py-16">
   <!-- ========== MAIN CONTENT ========== -->
   <div id="content" class="w-full max-w-md mx-auto p-6">
     <div
-      class="mt-7 bg-white border border-gray-200 rounded-xl shadow-sm dark:bg-neutral-900 dark:border-neutral-700"
+      class="mt-7 border border-ctp-pink rounded-xl shadow-sm dark:border-ctp-pink"
     >
       <div class="p-4 sm:p-7">
         <div class="text-center">
@@ -26,7 +26,7 @@
                   type="password"
                   id="password"
                   name="password"
-                  class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                  class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-gray-400 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
                   required=""
                   aria-describedby="password-error"
                 />
