Fix formatting issues with the code blocks in /post page

--- a/views/post.html
+++ b/views/post.html
@@ -14,11 +14,7 @@
       <!-- Content -->
       <div class="space-y-5 md:space-y-8">
         {{#post}}
-        <pre>
-            <code class="language-css">
-              {{Content}}
-            </code>
-          </pre>
+        <pre><code class="language-css">{{Content}}</code></pre>
 
         {{/post}}
       </div>
