--- a/views/posts.html
+++ b/views/posts.html
@@ -3,19 +3,30 @@
   <div class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto">
     <div class="max-w-2xl">
       {{#posts}}
-      <a href="/post/{{Date}}/{{Name}}">
-        <div class="my-3 p-4 border rounded-lg min-w-[220px] border-ctp-pink">
-          <h3
-            class="font-semibold text-lg bg-gradient-to-r from-ctp-pink to-ctp-mauve inline-block text-transparent bg-clip-text dark:text-slate-300"
+      <div class="relative">
+        <button
+          id="copyCode"
+          class="absolute right-3 top-[-15px] z-10 px-3 border-2 rounded-lg border-ctp-pink bg-ctp-base text-ctp-mauve font-normal text-lg"
+          onclick="getCodeToCopy('{{Date}}/{{Name}}')"
+        >
+          Copy Code
+        </button>
+        <a href="/post/{{Date}}/{{Name}}">
+          <div
+            class="my-7 p-4 border rounded-lg min-w-[220px] border-ctp-pink z-0"
           >
-            {{Name}}
-          </h3>
+            <h3
+              class="font-semibold text-lg bg-gradient-to-r from-ctp-pink to-ctp-mauve inline-block text-transparent bg-clip-text dark:text-slate-300"
+            >
+              {{Name}}
+            </h3>
 
-          <p class="mb-1 text-sm text-ctp-subtext1">{{Date}}</p>
+            <p class="mb-1 text-sm text-ctp-subtext1">{{Date}}</p>
 
-          <p class="mt-1 text-sm"></p>
-        </div>
-      </a>
+            <p class="mt-1 text-sm"></p>
+          </div>
+        </a>
+      </div>
       {{/posts}}
     </div>
     <!-- End Blog Article -->
