--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Segoe UI";
+  src: url("/static/SegoeUI.ttf");
+}
+
 body {
   height: 100vh;
 }
