--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,6 @@
-<main class="flex min-h-screen items-center py-16">
+<!-- <main class="flex min-h-screen items-center py-16">
   <!-- ========== MAIN CONTENT ========== -->
-  <div id="content" class="w-full max-w-md mx-auto p-6">
+<!-- <div id="content" class="w-full max-w-md mx-auto p-6">
     <div
       class="mt-7 border border-ctp-pink rounded-xl shadow-sm dark:border-ctp-pink"
     >
@@ -10,59 +10,92 @@
             Sign in
           </h1>
         </div>
+        <div class="m-6 w-full">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="21"
+            height="21"
+            viewBox="0 0 21 21"
+          >
+            <title>MS-SymbolLockup</title>
+            <rect x="1" y="1" width="9" height="9" fill="#f25022" />
+            <rect x="1" y="11" width="9" height="9" fill="#00a4ef" />
+            <rect x="11" y="1" width="9" height="9" fill="#7fba00" />
+            <rect x="11" y="11" width="9" height="9" fill="#ffb900" />
+          </svg>
+          <p class="block dark:text-white">Sign in with Microsoft</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>  -->
 
-        <!-- Form -->
-        <form data-bitwarden-watching="1" method="post" action="/login">
-          <div class="grid gap-y-4">
-            <!-- Form Group -->
-            <div>
-              <div class="flex justify-between items-center">
-                <label for="password" class="block text-sm mb-2 dark:text-white"
-                  >Password</label
-                >
-              </div>
-              <div class="relative">
-                <input
-                  type="password"
-                  id="password"
-                  name="password"
-                  class="py-3 px-4 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-gray-400 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                  required=""
-                  aria-describedby="password-error"
-                />
-                <div
-                  class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3"
-                >
-                  <svg
-                    class="size-5 text-red-500"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    viewBox="0 0 16 16"
-                    aria-hidden="true"
-                  >
-                    <path
-                      d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"
-                    ></path>
-                  </svg>
-                </div>
-              </div>
-              <p class="hidden text-xs text-red-600 mt-2" id="password-error">
-                8+ characters required
-              </p>
-            </div>
-            <!-- End Form Group -->
+<main class="flex min-h-screen items-center py-16">
+  <!-- ========== MAIN CONTENT ========== -->
+  <div id="content" class="w-full max-w-md mx-auto p-6">
+    <div
+      class="mt-7 border border-ctp-pink rounded-xl shadow-sm dark:border-ctp-pink"
+    >
+      <div class="p-4 sm:p-7">
+        <!-- <div class="text-center">
+          <h1 class="block text-2xl font-bold text-gray-800 dark:text-white">
+            Sign in
+          </h1>
+        </div> -->
 
-            <button
-              type="submit"
-              class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
+        <div
+          class="flex items-center justify-center dark:bg-[#2f2f2f] px-[12px] mt-4 h-[41px] cursor-pointer font-semibold"
+          style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"
+        >
+          <div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="21"
+              height="21"
+              viewBox="0 0 21 21"
             >
-              Sign in
-            </button>
+              <title>MS-SymbolLockup</title>
+              <rect x="1" y="1" width="9" height="9" fill="#f25022" />
+              <rect x="1" y="11" width="9" height="9" fill="#00a4ef" />
+              <rect x="11" y="1" width="9" height="9" fill="#7fba00" />
+              <rect x="11" y="11" width="9" height="9" fill="#ffb900" />
+            </svg>
           </div>
-        </form>
-        <!-- End Form -->
+          <div class="inline-block ml-[12px] text-white">
+            Sign in with Microsoft
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </main>
+
+<!-- <main class="flex min-h-screen items-center py-16">
+  <div class="w-full max-w-md mx-auto p-6 text-center">
+    <h1 class="block text-2xl font-bold text-gray-800 dark:text-white">
+      Sign in
+    </h1>
+    <div class="">
+      <div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="21"
+          height="21"
+          viewBox="0 0 21 21"
+        >
+          <title>MS-SymbolLockup</title>
+          <rect x="1" y="1" width="9" height="9" fill="#f25022" />
+          <rect x="1" y="11" width="9" height="9" fill="#00a4ef" />
+          <rect x="11" y="1" width="9" height="9" fill="#7fba00" />
+          <rect x="11" y="11" width="9" height="9" fill="#ffb900" />
+        </svg>
+      </div>
+      <div
+        class="inline-block m-[12px] text-white text-[15px]"
+        style="margin: 12px; font-size: 15px"
+      >
+        Sign in with Microsoft
+      </div>
+    </div>
+  </div>
+</main> -->
