Fixed MicrosoftLoginBtn working just in production and CopyCodeBtn not looking right

--- a/views/login.html
+++ b/views/login.html
@@ -76,7 +76,7 @@
   console.log(loginBtn);
   loginBtn.addEventListener("click", () => {
     console.log("Btn clicked");
-    window.location.replace("https://ettih.blitzcloud.me/auth/microsoft");
+    window.location.replace("/auth/microsoft");
   });
 </script>
 
