--- a/views/post.html
+++ b/views/post.html
@@ -17,7 +17,7 @@
         <div class="relative">
           <button
             id="copyCode"
-            class="absolute right-3 top-[-15px] z-10 px-3 border border=[3px] border-ctp-rosewater rounded-lg bg-ctp-base text-ctp-mauve font-normal text-lg"
+            class="absolute right-3 top-[-15px] z-10 px-3 border border=[3px] border-ctp-rosewater rounded-lg bg-ctp-base text-ctp-mauve font-normal text-base"
             onclick="getCodeToCopy('{{Date}}/{{Name}}')"
           >
             Copy Code
