--- a/views/posts.html
+++ b/views/posts.html
@@ -6,7 +6,7 @@
       <div class="relative">
         <button
           id="copyCode"
-          class="absolute right-3 top-[-15px] z-10 px-3 border-2 rounded-lg border-ctp-pink bg-ctp-base text-ctp-mauve font-normal text-lg"
+          class="absolute right-3 top-[-15px] z-10 px-3 border-2 rounded-lg border-ctp-pink bg-ctp-base text-ctp-mauve font-normal text-base"
           onclick="getCodeToCopy('{{Date}}/{{Name}}')"
         >
           Copy Code
