--- a/static/style.css
+++ b/static/style.css
@@ -10,3 +10,16 @@
 body {
   height: 100vh;
 }
+
+/* ===== Code Blocks & Syntax Highlighting ===== */
+pre:has(code) {
+  @apply overflow-x-auto whitespace-pre-wrap break-words p-2;
+}
+code,
+blockquote {
+  word-wrap: break-word;
+}
+
+pre > code {
+  white-space: pre;
+}
