--- a/views/post.html
+++ b/views/post.html
@@ -3,6 +3,10 @@
     <div class="max-w-2xl">
       <div class="space-y-5 md:space-y-8">
         {{#post}}
+        <div class="dark:text-white">
+          <h1>{{Name}}</h1>
+          <p>{{Date}}</p>
+        </div>
         <div class="relative">
           <button
             id="copyCode"
