--- a/static/style.css
+++ b/static/style.css
@@ -13,13 +13,15 @@ body {
 
 /* ===== Code Blocks & Syntax Highlighting ===== */
 pre:has(code) {
-  @apply overflow-x-auto whitespace-pre-wrap break-words p-2;
+  @apply overflow-x-auto whitespace-pre-wrap break-words p-6 border border-yellow-200 rounded;
 }
-code,
+/* code,
 blockquote {
   word-wrap: break-word;
 }
 
+keep it because of the weird word wrap bug regarding the code blocks
+dont uncomment
 pre > code {
   white-space: pre;
-}
+} */
