--- a/views/posts.html
+++ b/views/posts.html
@@ -1,19 +1,19 @@
-<main class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto">
+<main class="max-w-4xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto">
   <!-- Blog Article -->
-  <div class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto">
+  <div class="max-w-4xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto">
     <div class="max-w-2xl">
       {{#posts}}
       <div class="relative">
         <button
           id="copyCode"
-          class="absolute right-3 top-[-15px] z-10 px-3 border-2 rounded-lg border-ctp-pink bg-ctp-base text-ctp-mauve font-normal text-base"
+          class="absolute right-3 top-[-15px] z-10 px-3 border border-1 rounded-lg border-ctp-pink bg-ctp-base text-ctp-mauve font-normal text-base"
           onclick="getCodeToCopy('{{Date}}/{{Name}}')"
         >
           Copy Code
         </button>
         <a href="/post/{{Date}}/{{Name}}">
           <div
-            class="my-7 p-4 border rounded-lg min-w-[220px] border-ctp-pink z-0"
+            class="my-7 p-4 border rounded-lg min-w-[220px] border-ctp-yellow z-0"
           >
             <h3
               class="font-semibold text-lg bg-gradient-to-r from-ctp-pink to-ctp-mauve inline-block text-transparent bg-clip-text dark:text-slate-300"
