--- a/views/layout/main.html
+++ b/views/layout/main.html
@@ -9,7 +9,7 @@
 
     <title>{{Title}}</title>
   </head>
-  <body class="min-h-screen ctp-macchiato bg-ctp-base dark">
+  <body class="h-auto ctp-macchiato bg-ctp-base dark">
     {{>views/partials/nav.html}}
     <div class="h-full z-0">{{&embed}}</div>
     <div
