--- a/views/login.html
+++ b/views/login.html
@@ -30,7 +30,7 @@
   </div>
 </main>  -->
 
-<main class="flex min-h-screen items-center py-16">
+<main class="flex items-center py-16">
   <!-- ========== MAIN CONTENT ========== -->
   <div id="content" class="w-full max-w-md mx-auto p-6">
     <div
