--- a/views/post.html
+++ b/views/post.html
@@ -10,7 +10,7 @@
         <div class="relative">
           <button
             id="copyCode"
-            class="absolute right-3 top-[-15px] z-10 px-3 py-1 border border=[3px] border-ctp-rosewater rounded-lg bg-ctp-base text-ctp-mauve font-normal text-base"
+            class="absolute right-3 top-[-15px] px-3 py-1 border border=[3px] border-ctp-rosewater rounded-lg bg-ctp-base text-ctp-mauve font-normal text-base"
             onclick="getCodeToCopy('{{Date}}/{{Name}}')"
           >
             Copy Code
@@ -18,7 +18,7 @@
           <!-- prettier-ignore -->
           <div
             id="codeBlock"
-            class="overflow-auto "
+            class=""
           >{{Content}}</div>
         </div>
         {{/post}}
