--- a/views/post.html
+++ b/views/post.html
@@ -3,9 +3,21 @@
     <div class="max-w-2xl">
       <div class="space-y-5 md:space-y-8">
         {{#post}}
-        <div class="dark:text-white">
-          <h1>{{Name}}</h1>
-          <p>{{Date}}</p>
+        <div class="dark:text-white flex justify-between items-center">
+          <div>
+            <h1>{{Name}}</h1>
+            <p>{{Date}}</p>
+          </div>
+          <div class="flex min-w-max">
+            <div class="mx-1">
+              <a id="nextPostBtn" href="/post/{{previousPost}}"
+                >Previous post</a
+              >
+            </div>
+            <div class="mx-1">
+              <a id="previousPostBtn" href="/post/{{nextPost}}">Next post</a>
+            </div>
+          </div>
         </div>
         <div class="relative">
           <button
