Update acum rutele pentru laboratoare si tipizate sunt fiecare in fisierele lor

--- a/views/posts.html
+++ b/views/posts.html
@@ -11,7 +11,7 @@
         >
           Copy Code
         </button>
-        <a href="/post/{{Date}}/{{Name}}">
+        <a href="/lab/{{Date}}/{{Name}}">
           <div
             class="my-7 p-4 border rounded-lg min-w-[220px] border-ctp-yellow z-0"
           >
