--- a/views/_posts.html
+++ b/views/_posts.html
@@ -11,14 +11,14 @@
         >
           Copy Code
         </button>
-        <a href="/lab/{{Date}}/{{Name}}">
+        <a href="/lab/{{Date}}/{{Title}}">
           <div
             class="my-7 p-4 border rounded-lg min-w-[220px] border-ctp-yellow z-0"
           >
             <h3
               class="font-semibold text-lg bg-gradient-to-r from-ctp-pink to-ctp-mauve inline-block text-transparent bg-clip-text dark:text-slate-300"
             >
-              {{Name}}
+              {{Title}}
             </h3>
 
             <p class="mb-1 text-sm text-ctp-subtext1">{{Date}}</p>
