--- a/views/_tipizat.html
+++ b/views/_tipizat.html
@@ -5,7 +5,7 @@
         {{#post}}
         <div class="dark:text-white flex justify-between items-center">
           <div>
-            <h1>{{Name}}</h1>
+            <h1>{{Title}}</h1>
             <p>{{Date}}</p>
             {{{LinkCompiler}}}
           </div>
