Update not tasted fully but stable to deploy

--- a/views/Posts.html
+++ b/views/Posts.html
@@ -17,9 +17,11 @@
               {{Title}}
             </h3>
             <p class="mb-1 text-sm text-gray-500 dark:text-neutral-500">
-              {{#Tags}}
+              <!-- {{#Tags}}
               <span>Tags:</span>
-              {{/Tags}} {{#Tags}} {{.}} {{/Tags}}
+              {{/Tags}}  -->
+
+              {{#Tags}} {{.}} {{/Tags}}
             </p>
             <p class="mb-1 text-sm text-ctp-subtext1">{{Date}}</p>
             {{#Description}}
