Api routes in testing

--- a/views/blogPost.html
+++ b/views/blogPost.html
@@ -3,7 +3,7 @@
   <div class="max-w-2xl">
     <!-- Content -->
     <div class="space-y-5 md:space-y-8 prose prose-invert prose-h1:text-center">
-      {{{content}}}
+      {{title}} {{{content}}}
     </div>
     <!-- End Content -->
   </div>
